# vscode_wasm_template

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  readme.md
.devcontainer/: Dockerfile  devcontainer.json
c++/: CMakeLists.txt
c++/include/: ShapefileReader.h  interface.h  path_planning.h
c++/src/: CMakeLists.txt  ShapefileReader.cpp  interface.cpp
c++/test/: CMakeLists.txt  ShapefileReaderTest.cpp  double.cpp  ifstream.cpp
cpp/: CMakeLists.txt
cpp/include/: ByteOrderConverter.h  optional.h  shapefile.h
cpp/test/: CMakeLists.txt  Tester.cpp  ifstream.cpp  index.html  sum.cpp
include/: config.h.in
js/test/: add.js  index.html  shp_reader.js  sum.js
src/: CMakeLists.txt
test/: CMakeLists.txt  Tester.cpp  double.cpp  path_planning.cpp  uint64_t.cpp
